--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ issue_tracker: https://github.com/flutter/flutter/issues?q=is%3Aissue+is%3Aopen+
 version: 2.9.1
 
 environment:
-  sdk: ^3.2.3
-  flutter: ">=3.16.6"
+  sdk: ^3.1.5
+  flutter: ">=3.13.9"
 
 flutter:
   plugin:
@@ -26,7 +26,7 @@ dependencies:
     sdk: flutter
   html: ^0.15.0
   video_player_android: ^2.3.5
-  video_player_avfoundation: ^2.5.6
+  # video_player_avfoundation: ^2.5.6
   video_player_platform_interface: ^6.2.0
   video_player_web: ^2.1.0
 
